# PunisherC2-Agent

./: Cargo.toml  README.md
src/: main.rs
src/c2/: client.rs  data.rs
src/system/: commands.rs  gather.rs  mod.rs  network.rs
