[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
os_info = "3.2"
whoami = "1.5.2"
get_if_addrs = "0.5"
chrono = "0.4"
winapi = { version = "0.3", features = [
    "winnt",
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "lmcons",
    "lmaccess",
    "lmapibuf",
    "minwindef",
    "winuser",
    "wincon"
] }
once_cell = "1.19"
libc = "0.2"
widestring = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
machine-uid = "0.3.0"  # For hardware-based ID
uuid = { version = "1.6", features = ["v5", "serde"] }